# zipcompose

./: Cargo.toml  LICENSE  README.md
src/: command.rs  compose.rs  main.rs  manifest.rs
tests/: integration_tests.rs
