[package]
name = "zipcompose"
version = "0.1.1"
edition = "2021"
description = "YAML-based zip runner"
homepage = "https://github.com/tkr66/zipcompose"
repository = "https://github.com/tkr66/zipcompose"
license = "MIT"
readme = "README.md"
keywords = ["zip", "util"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.2"
serde = "1.0"
serde_yml = "0.0.11"
zip = "2.2.0"
